Add stream_name and flush to listing

--- a/priv/assets/css/swirl.css
+++ b/priv/assets/css/swirl.css
@@ -3,7 +3,12 @@ body {
   padding-bottom: 50px;
 }
 
-.section {
+.header {
   margin-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.section {
+  margin-bottom: 15px;
   border-bottom: 1px solid #e5e5e5;
 }
