--- a/priv/assets/css/swirl.css
+++ b/priv/assets/css/swirl.css
@@ -6,9 +6,11 @@ body {
 .header {
   margin-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
+  color: #1ABC9C;
 }
 
 .section {
   margin-bottom: 15px;
   border-bottom: 1px solid #e5e5e5;
+  color: #1ABC9C;
 }
